--- a/index.html
+++ b/index.html
@@ -20,9 +20,32 @@
     <!-- DNS prefetch for external resources -->
     <link rel="dns-prefetch" href="//fonts.gstatic.com" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
     <title>Vite + React + TS</title>
     <style>
       /* Critical CSS for above-the-fold content */
+
+      body {
+        font-family: "Kumbh Sans", -apple-system, BlinkMacSystemFont, "Segoe UI",
+          Roboto, sans-serif;
+        margin: 0;
+        padding: 0;
+      }
+
+      /* Prevent FOUC (Flash of Unstyled Content) */
+      .loading {
+        visibility: hidden;
+      }
+
+      .loaded {
+        visibility: visible;
+      }
       .hero-section {
         display: flex;
       }
@@ -34,7 +57,7 @@
     </style>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="loading"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
