resolve display issue

--- a/index.html
+++ b/index.html
@@ -9,25 +9,8 @@
       href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&display=swap"
       rel="stylesheet"
     />
-    <link
-      rel="preload"
-      href="/src/assets/images/image-product-1.jpg"
-      as="image"
-      type="image/jpeg"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-
-    <!-- DNS prefetch for external resources -->
-    <link rel="dns-prefetch" href="//fonts.gstatic.com" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&display=swap"
-      rel="stylesheet"
-    />
-    <title>Vite + React + TS</title>
+    <title>Fall Limited Edition Sneakers - Premium Footwear</title>
     <style>
       /* Critical CSS for above-the-fold content */
 
@@ -38,14 +21,6 @@
         padding: 0;
       }
 
-      /* Prevent FOUC (Flash of Unstyled Content) */
-      .loading {
-        visibility: hidden;
-      }
-
-      .loaded {
-        visibility: visible;
-      }
       .hero-section {
         display: flex;
       }
@@ -57,7 +32,7 @@
     </style>
   </head>
   <body>
-    <div id="root" class="loading"></div>
+    <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
