--- a/index.html
+++ b/index.html
@@ -12,23 +12,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fall Limited Edition Sneakers - Premium Footwear</title>
     <style>
-      /* Critical CSS for above-the-fold content */
-
+      /* Prevent FOUC */
       body {
         font-family: "Kumbh Sans", -apple-system, BlinkMacSystemFont, "Segoe UI",
           Roboto, sans-serif;
         margin: 0;
         padding: 0;
       }
-
-      .hero-section {
-        display: flex;
-      }
-      .nav {
-        display: flex;
-        justify-content: space-between;
-      }
-      /* Add other critical styles */
     </style>
   </head>
   <body>
